--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^8.19.0",
-    "ws": "^8.18.3"
+    "mongoose": "^8.19.0"
   }
 }
